--- a/src/content/docs/reference/Attributes/mc_midTexCoord.mdx
+++ b/src/content/docs/reference/Attributes/mc_midTexCoord.mdx
@@ -14,4 +14,4 @@ sidebar:
 
 The texture UV coordinate of the center of the texture of the current quad.
 
-> ***Note***: this is calculated per quad, so for example when rendering a slab block `mc_midTexCoord` points to the center of the portion of the texture covered by the slab, not the center of the parent block's texture.
+> ***Note***: this is calculated per-quad, so, for example, when rendering a slab block, `mc_midTexCoord` points to the center of the portion of the texture covered by the slab, not the center of the parent block's texture.
