--- a/src/content/docs/reference/Attributes/vaNormal.mdx
+++ b/src/content/docs/reference/Attributes/vaNormal.mdx
@@ -18,6 +18,12 @@ import { Aside } from '@astrojs/starlight/components';
 
 ---
 
-The vertex normal vector attribute, equivalent to `gl_Normal.xyz` from the compatibility profile.
+The vertex normal vector attribute, equivalent to `gl_Normal` from the compatibility profile.
 
 The normal vector from `vaNormal` is in model space (which varies for different geometry). It can be converted to view space using [`normalMatrix`](/reference/uniforms/matrices/normalmatrix) (or `gl_NormalMatrix` in the compatibility profile).
+```glsl
+vec3 normal = normalMatrix * vaNormal;
+```
+```glsl
+vec3 normal = gl_NormalMatrix * gl_Normal;
+```
