--- a/src/content/docs/reference/Attributes/mc_Entity.mdx
+++ b/src/content/docs/reference/Attributes/mc_Entity.mdx
@@ -18,4 +18,4 @@ The `x` component stores the block ID which was assigned to the current block in
 
 The `y` component stores the "render type", which is `1` for fluids (water, lava, etc) and `-1` for all other blocks.
 
-This attribute is only available for terrain. For other types of geometry, see [`entityid`](/reference/uniforms/general/entityid) and [`blockentityid`](/reference/uniforms/general/blockentityid)
+This attribute is only available for terrain. For other types of geometry, see [`entityid`](/reference/uniforms/general/entityid) and [`blockentityid`](/reference/uniforms/general/blockentityid).
