Initial grouping prototype for uniforms

--- a/src/content/docs/reference/Uniforms/General/biome_category.mdx
+++ b/src/content/docs/reference/Uniforms/General/biome_category.mdx
@@ -2,7 +2,7 @@
 title: biome_category
 description: The category of the biome currently occupied by the player.
 sidebar:
-  label: biome_catagory
+  label: biome_category
   order: 1
   badge:
     text: Iris Only
